Fixed weird spacing

--- a/course-planner/app/searchbar/src/components/page.module.css
+++ b/course-planner/app/searchbar/src/components/page.module.css
@@ -78,6 +78,8 @@ body {
     line-height: 14px;
     overflow-x: auto;
     height: auto;
+    clear:left;
+    text-align: left;
 }
 
 .dropZoneStyle{
